--- a/client/app/dashboard/dashboard.css
+++ b/client/app/dashboard/dashboard.css
@@ -73,7 +73,9 @@
         }
         #clubs_list_wrap    {
             background-color: rgba(230,230,230,0.1);
-            box-shadow: 0px 0px 3px grey;
+            box-shadow: 0px 0px 0px grey;
+            border:1px solid;
+            border-color: rgba(230,230,230,0.15);
             float: left;
             height: auto;
             margin: 5px 0px;
