--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -59,8 +59,8 @@
                 <div  id="notifDropDown" class="dropdown-menu">
                     
                         <ul class="nav nav-pills nav-stacked" id="notifMenu" onclick="document.getElementById('notifDropDown').style.display = 'block'">
-                            <a data-toggle="tab" href="#allNotifs" ><li class="active">All</li></a>
-                            <a data-toggle="tab" href="#{{dummyId[$index]}}" ng-repeat="friend in dummyName"><li >{{friend}}</li></a>
+                            <a data-toggle="tab" href="#allNotifs" ><li class="active w2b">All</li></a>
+                            <a data-toggle="tab" href="#{{dummyId[$index]}}" ng-repeat="friend in dummyName"><li class="w2b">{{friend}}</li></a>
                         </ul>
                     
                     
