--- a/client/app/uploadPortal/uploadPortal.css
+++ b/client/app/uploadPortal/uploadPortal.css
@@ -30,8 +30,9 @@
 			}
 	.notif_div_wrap	{
 		padding: 0px;
-		border-bottom: 1px solid grey;
+		
 		height:90px;
+		box-shadow: 1px 1px 5px black;
 			}
 	#img_post 	{
 		position: absolute;
@@ -52,6 +53,7 @@
 		position: relative;		
 		/*margin: 30px 0px;*/
 		float: left;
+		padding: 2px 0px;
 	}
 	.w2bfade	{
 		display: block;
