--- a/client/components/modal/modal.html
+++ b/client/components/modal/modal.html
@@ -227,13 +227,7 @@
 													    				
 														    	<tr ng-repeat="credit in creditName">
 														    		<td style="width:50%;verticle-align:top">
-														    			<tags-input ng-model="creditName[$index]" display-property="creditDetail" add-from-autocomplete-only="true" max-tags="1" enforce-max-tags  class="bootstrap">
-				      													<auto-complete 
-				      													source="getSuggestionsForCredits($query)"
-				      													
-				      													>
-				      													</auto-complete>
-				    												</tags-input>
+														    			
 														    		</td>
 														    		<td style="width:50%;verticle-align:top">
 														    			<tags-input ng-model="creditUser[$index]" display-property="name" add-from-autocomplete-only="true"  class="bootstrap">
@@ -264,8 +258,11 @@
 												<!--***************Article Upload form**************-->
 
 												<div id="article_form"  class="tab-pane fade">
-													<h3>Add your Article here</h3>
-													<form name="form" ng-submit="articleSubmit(form)" ng-model="form">
+												<form name="form" ng-submit="articleSubmit(form)" ng-model="form">
+													<div class="tab-content">
+													<div id="article_det" class="tab-pane fade in active" >
+														<h3>Add your Article here</h3>
+													
 														<div class="form-group">
 															<input type="text" class="form-control upld_form" ng-model="form.articleName" placeholder="Article Name">
 														</div>
@@ -285,15 +282,61 @@
 
 														    </tags-input>
 														</div>
-															<a href="#credits" data-toggle="tab" class="b2w">Next</a>
-													</form>
+															<a href="#creditsArticle" data-toggle="tab" class="b2w">Next</a>
+														</div>
+														<div id="creditsArticle" class="tab-pane fade">
+										    
+										    
+													    <table>
+													    	<tr>
+													    		<th>Credit</th>
+													    		<th>User</th>
+													    	</tr>
+													    				
+														    	<tr ng-repeat="credit in creditName">
+														    		<td style="width:50%;verticle-align:top">
+														    			<tags-input ng-model="creditName[$index]" display-property="creditDetail" add-from-autocomplete-only="true" max-tags="1" enforce-max-tags  class="bootstrap">
+				      													<auto-complete 
+				      													source="getSuggestionsForCredits($query)"
+				      													
+				      													>
+				      													</auto-complete>
+				    												</tags-input>
+														    		</td>
+														    		<td style="width:50%;verticle-align:top">
+														    			<tags-input ng-model="creditUser[$index]" display-property="name" add-from-autocomplete-only="true"  class="bootstrap">
+				      													<auto-complete 
+				      													source="getSuggestionsForNames($query)"
+				      													min-length='1'>
+				      													</auto-complete>
+				    												</tags-input>
+														    		</td>
+														    	</tr>	
+													    							    		
+													    </table>
+
+												   
+										      		<div>
+										      			<button type="button" class="b2w" ng-click="addCredit()">Add Credit</button>
+										      			<a data-toggle="tab" href="#article_det" class="b2w">Back</a>
+										      			<br/>
+										      			<button type="submit" class="b2w">Submit</button>
+										      		</div>
+
+										      		
+										    	</div>
+														</div>
+												</form>
 												</div>
 
 												<!--**********Image Upload Form******************-->
 
 												<div id="img_form"  class="tab-pane fade">
+												<form name="form" ng-submit="imageSubmit(form)" ng-model="form" >
+													<div class="tab-content">
+													<div id="image_det" class="tab-pane fade in active" >
 													<h3>Add your Image here</h3>
-													<form name="form" ng-submit="imageSubmit(form)" ng-model="form" >
+													
 														<div class="form-group">
 															<input type="text" class="form-control upld_form" ng-model="form.imgName" placeholder="Image Name">
 														</div>
@@ -314,7 +357,51 @@
 
 														    </tags-input>
 														</div>
-															<a href="#credits" data-toggle="tab" class="b2w">Next</a>													</form>
+															<a href="#creditsImage" data-toggle="tab" class="b2w">Next</a>	
+														</div>
+														<div id="creditsImage" class="tab-pane fade">
+										    
+										    
+															    <table>
+															    	<tr>
+															    		<th>Credit</th>
+															    		<th>User</th>
+															    	</tr>
+															    				
+																    	<tr ng-repeat="credit in creditName">
+																    		<td style="width:50%;verticle-align:top">
+																    			<tags-input ng-model="creditName[$index]" display-property="creditDetail" add-from-autocomplete-only="true" max-tags="1" enforce-max-tags  class="bootstrap">
+						      													<auto-complete 
+						      													source="getSuggestionsForCredits($query)"
+						      													
+						      													>
+						      													</auto-complete>
+						    												</tags-input>
+																    		</td>
+																    		<td style="width:50%;verticle-align:top">
+																    			<tags-input ng-model="creditUser[$index]" display-property="name" add-from-autocomplete-only="true"  class="bootstrap">
+						      													<auto-complete 
+						      													source="getSuggestionsForNames($query)"
+						      													min-length='1'>
+						      													</auto-complete>
+						    												</tags-input>
+																    		</td>
+																    	</tr>	
+															    							    		
+															    </table>
+
+														   
+												      		<div>
+												      			<button type="button" class="b2w" ng-click="addCredit()">Add Credit</button>
+												      			<a data-toggle="tab" href="#image_det" class="b2w">Back</a>
+												      			<br/>
+												      			<button type="submit" class="b2w">Submit</button>
+												      		</div>
+
+												      		
+												    	</div>
+														</div>						
+													</form>
 													<div  >
 														<img src="{{form.picUrl}}" height="400px" width="auto" >
 													</div>
@@ -322,6 +409,8 @@
 											</div>
 
 										</div>
+
+
 										<div id="credits" class="tab-pane fade">
 										    
 										    
