autocomplete working, need to acces its data

--- a/client/components/modal/modal.css
+++ b/client/components/modal/modal.css
@@ -136,7 +136,8 @@
 
 
 md-autocomplete[md-floating-label] {
-  padding-bottom: 26px;
+  padding-bottom: 0px;
+  text-align: left;
 }
 
 .md-padding{
