--- a/client/components/modal/modal.html
+++ b/client/components/modal/modal.html
@@ -145,92 +145,115 @@
 <!--***********************************upload section******************************************-->
 	        								
 
-			<div class="booking_body">
-
-					<div id="upload" class="modal img_modal fade" role="dialog">
-						<div class="modal-dialog img_modal-dialog">
+<div class="booking_body">
+	<div id="upload" class="modal img_modal fade" role="dialog">
+		<div class="modal-dialog img_modal-dialog">
 
 						<!-- Modal content-->
 					      
-								
-				        	<div class="modal-body img_modal-body centric">
-				        		<button type="button" class="close img_close" data-dismiss="modal" onclick="document.getElementById('for_blur').style.filter = 'blur(0px)'">&times;</button>
-				        		<div onclick="document.getElementById('upld_display').style.display = 'block'">
-					        		<a href="#article_form" data-toggle="tab" ><button type="button" class="b2w" id="up_art">Article</button></a>
-					        		<a href="#img_form" data-toggle="tab" ><button type="button" class="b2w" id="up_art">Image</button></a>
-					        		<a href="#video_form" data-toggle="tab" ><button type="button" class="b2w" id="up_art">Video</button></a>
-					        	</div>
+							
+			<div class="modal-body img_modal-body centric">
+			    <button type="button" class="close img_close" data-dismiss="modal" onclick="document.getElementById('for_blur').style.filter = 'blur(0px)'">&times;</button>
+        		<div onclick="document.getElementById('upld_display').style.display = 'block'">
+					<a href="#article_form" data-toggle="tab" ><button type="button" class="b2w" id="up_art">Article</button></a>
+	        		<a href="#img_form" data-toggle="tab" ><button type="button" class="b2w" id="up_art">Image</button></a>
+	        		<a href="#video_form" data-toggle="tab" ><button type="button" class="b2w" id="up_art">Video</button></a>
+	        	</div>
 
 
-				        		<div id="upld_display"  class="tab-content col-md-6">
-		        					<button type="button" class="close" onclick="document.getElementById('HOF_display').style.display = 'none'">&times;</button>
-									<ul class="nav nav-tabs">
-									 	 
-									</ul>
+	       		<div id="upld_display"  class="tab-content col-md-6">
+					<button type="button" class="close" onclick="document.getElementById('HOF_display').style.display = 'none'">&times;</button>
+					<ul class="nav nav-tabs">
+					 	 
+					</ul>
 
-									<div class="tab-content">
-										<div class="tab-pane fade in active" id="upload_form" ng-controller="UploadPortalCtrl">
-											<div class="tab-content">
+					<div class="tab-content">
+						<div class="tab-pane fade in active" id="upload_form" ng-controller="UploadPortalCtrl">
+							<div class="tab-content">
 
 											<!--************Video Upload Form********-->
-											<div id="video_form" class="tab-pane fade in active" >
-											<form name="form" ng-submit="videoSubmit(form)" ng-model="form">
-												<div class="tab-content">
-												<div id="video_det" class="tab-pane fade in active" >
-													<h3>Add your Video here</h3>
+								<div id="video_form" class="tab-pane fade in active" >
+									<form name="form" ng-submit="videoSubmit(form)" ng-model="form">
+										<div class="tab-content">
+											<div id="video_det" class="tab-pane fade in active" >
+												<h3>Add your Video here</h3>
 													
-														<div class="form-group">
-															
-															<input type="text" class="form-control upld_form" ng-model="form.vidName" placeholder="Name of Video">
-														</div>
-														<div class="form-group">
-															
-															<input type="text" class="form-control upld_form" ng-model="form.vidUrl" placeholder="Youtube link to video" 
-															>
-														</div>
-														<div class="form-group">
-															
-															<input type="text" class="form-control upld_form" ng-model="form.posterUrl" placeholder="Poster Url">
-														</div>
-														<div class="form-group"> <!-- need to put select with multi option selection -->
-															<label>Genre/Category</label>
-															<select ng-model="form.genres" class="form-control upld_form" placeholder="Genres">
-																<option value="horror">horror</option>
-																<option value="comedy">comedy</option>
-															</select>   <!-- Make it a maximum of three using array size in controller -->
-														</div>
-														<div class="form-group"> <!-- Put text area -->
-															
-															<input type="text" class="form-control upld_form" ng-model="form.description" placeholder="Description">
-														</div>
-														<div class="form-group">
-															<tags-input ng-model="form.vedik" add-on-paste="true" display-property="name" placeholder="Add the Vedik" add-from-autocomplete-only="true"  class="bootstrap" replace-spaces-with-dashes="false">
-
-														      <auto-complete source="loadTags($query)" max-results-to-show="10"></auto-complete>
-
-														    </tags-input>
-														</div>
-														<a href="#creditsVideo" data-toggle="tab" class="b2w">Next</a>
+												<div class="form-group">
 													
-
-													
-
+													<input type="text" class="form-control upld_form" ng-model="form.vidName" placeholder="Name of Video">
 												</div>
-												<div id="creditsVideo" class="tab-pane fade">
-										    
-										    
-													    <table>
-													    	<tr>
-													    		<th>Credit</th>
-													    		<th>User</th>
-													    	</tr>
-													    				
-														    	<tr ng-repeat="credit in creditName">
-														    		<td style="width:50%;verticle-align:top">
+												<div class="form-group">
+															
+													<input type="text" class="form-control upld_form" ng-model="form.vidUrl" placeholder="Youtube link to video" 
+															>
+												</div>
+												<div class="form-group">
+															
+													<input type="text" class="form-control upld_form" ng-model="form.posterUrl" placeholder="Poster Url">
+												</div>
+												<div class="form-group"> <!-- need to put select with multi option selection -->
+													<label>Genre/Category</label>
+													<select ng-model="form.genres" class="form-control upld_form" placeholder="Genres">
+														<option value="horror">horror</option>							  <option value="comedy">comedy</option>
+													</select>   <!-- Make it a maximum of three using array size in controller -->
+												</div>
+												<div class="form-group"> <!-- Put text area -->
+															
+													<input type="text" class="form-control upld_form" ng-model="form.description" placeholder="Description">
+												</div>
+												<div class="form-group">
+													<tags-input ng-model="form.vedik" add-on-paste="true" display-property="name" placeholder="Add the Vedik" add-from-autocomplete-only="true"  class="bootstrap" replace-spaces-with-dashes="false">
+												        <auto-complete source="loadTags($query)" max-results-to-show="10"></auto-complete>
+
+												    </tags-input>
+												</div>
+												<a href="#creditsVideo" data-toggle="tab" class="b2w">Next</a>
+						
+											</div>
+											<div id="creditsVideo" class="tab-pane fade">
+									    
+											    <table>
+											    	<tr>
+											    		<th>Credit</th>
+											    		<th>User</th>
+												  	</tr>											    				
+											    	<tr ng-repeat="credit in creditType">
+											    		<td style="width:50%;verticle-align:top">
+		 									    			<div ng-controller="ProfileCtrl as ctrl" layout="column" ng-cloak>
+				  <md-content class="md-padding">
+				    <form ng-submit="$event.preventDefault()" name="searchForm">
+				     
+				      <div layout-gt-sm="row">
+				        
+				        <md-autocomplete flex required
+				            md-input-name="autocompleteField"
+				            md-input-minlength="2"
+				            md-input-maxlength="18"
+				            md-no-cache="ctrl.noCache"
+				            md-selected-item="creditType[$index]"
+				            md-search-text="ctrl.searchText"
+				            md-items="item in ctrl.querySearch(ctrl.searchText)"
+				            md-item-text="item.creditDetail"
+				            md-floating-label="Credit"
+				           >
+				          <md-item-template>
+				            <span md-highlight-text="ctrl.searchText">{{item.creditDetail}}</span>
+				          </md-item-template>
+				          <!--<div ng-messages="searchForm.autocompleteField.$error" ng-if="searchForm.autocompleteField.$touched">
+				            <div ng-message="required">You <b>must</b> have a favorite state.</div>
+				            <div ng-message="minlength">Your entry is not long enough.</div>
+				            <div ng-message="maxlength">Your entry is too long.</div>
+				          </div>-->
+				        </md-autocomplete>
+				      </div>
+				       </form>
+				  </md-content>
+				  {{creditType[$index].creditDetail}}
+				</div>
 														    			
 														    		</td>
 														    		<td style="width:50%;verticle-align:top">
-														    			<tags-input ng-model="creditUser[$index]" display-property="name" add-from-autocomplete-only="true"  class="bootstrap">
+														    			<tags-input ng-model="creditUser[$index]" display-property="name" add-from-autocomplete-only="true"  class="bootstrap" >
 				      													<auto-complete 
 				      													source="getSuggestionsForNames($query)"
 				      													min-length='1'>
@@ -293,9 +316,9 @@
 													    		<th>User</th>
 													    	</tr>
 													    				
-														    	<tr ng-repeat="credit in creditName">
+														    	<tr ng-repeat="credit in creditType">
 														    		<td style="width:50%;verticle-align:top">
-														    			<tags-input ng-model="creditName[$index]" display-property="creditDetail" add-from-autocomplete-only="true" max-tags="1" enforce-max-tags  class="bootstrap">
+														    			<tags-input ng-model="creditType[$index]" display-property="creditDetail" add-from-autocomplete-only="true" max-tags="1" enforce-max-tags  class="bootstrap">
 				      													<auto-complete 
 				      													source="getSuggestionsForCredits($query)"
 				      													
@@ -368,7 +391,7 @@
 															    		<th>User</th>
 															    	</tr>
 															    				
-																    	<tr ng-repeat="credit in creditName">
+																    	<tr ng-repeat="credit in creditType">
 																    		<td style="width:50%;verticle-align:top">
 																    			<tags-input ng-model="creditName[$index]" display-property="creditDetail" add-from-autocomplete-only="true" max-tags="1" enforce-max-tags  class="bootstrap">
 						      													<auto-complete 
@@ -420,7 +443,7 @@
 											    		<th>User</th>
 											    	</tr>
 											    				
-												    	<tr ng-repeat="credit in creditName">
+												    	<tr ng-repeat="credit in creditType">
 												    		<td style="width:50%;verticle-align:top">
 												    			<tags-input ng-model="creditName[$index]" display-property="creditDetail" add-from-autocomplete-only="true" max-tags='1'  class="bootstrap">
 		      													<auto-complete 
