--- a/client/app/profile/profile.css
+++ b/client/app/profile/profile.css
@@ -5,14 +5,21 @@
             }
             #user_profile   {
                 margin:0px auto 0px;
-                padding:10px 10px;
+                
                 position: absolute;
                 top:10%;
                 left:2%;
                 z-index: 1;
                 background-color: rgba(36,123,160,0.7);
-                
+                border: 2px solid white;
                 border-radius: 0px;
+            }
+            #user_profile_wrapper{
+                padding:10px 10px 10px 20px;
+
+            }
+            #dp {
+                border-right: 2px solid white;
             }
             #profile    {
                 width:100%;
@@ -44,7 +51,7 @@
             }
             #pro_name   {
                 font-size: 36px;                
-                padding: 0px 10px;
+                padding: 0px;
                 border-radius: 4px;
                 color: white;
 
@@ -84,7 +91,23 @@
                 color: white;
                 
                 border: 0px;
-            }            
+            }   
+
+            .g2b    {
+                background-color: #E6E6E6;
+                padding: 0px 2px 0px 2px;
+                margin: 0px 4px;
+                border: 0px;
+                color: black;
+                border-radius: 0px;
+
+            }
+            .g2b:hover    {
+                background-color: #247ba0;
+                color: white;
+                
+                border: 0px;
+            }               
             #HOF_display    {
                 position: absolute;
                 top: 10%;
@@ -119,18 +142,44 @@
                 border:0px;
                 background-color: none;
             }
-            input   {
+
+            .tags input{
+                border-bottom: 0px !important;
                 color: black;
+                font-size: 12px !important;
+            }
+            .bootstrap .tags {
+                border-radius: 0px;
+            }
+            .form-group input   {
+                color: black;
+                border-bottom: 1px solid #999999 !important;
             }
             .upld_form  {
-                width: 60%;
-                margin: 30px 20%;
+                width: 100% !important;
+                
 
+            }
+            .tab-content    {
+                padding: 0px !important;
+            }
+
+            tags-input .host{
+                border: 0px;
+                border-radius: 0px;
+                border-bottom: 1px solid #999999 !important;
+                margin: 0px;
+
+            }
+            
+            #upld_display .form-group{
+                margin: 0px;
             }
             #HOF_display span   {
                 padding: 20px; 
 
             }
+
             .b2w  {
                 background-color: rgba(38,88,132,1);
                 font-size: 14px;
@@ -177,6 +226,11 @@
                 right:20px;
                 display: hidden;
                 
+            }
+            #dp_edit    {
+                position: absolute;
+                z-index: 10;
+                bottom: 0px;
             }
             #pro_pic_wrapper:hover #gal_pic_edit    {
                 display: block;
@@ -303,6 +357,9 @@
             .dropdown   {
                 float: left;
             }
+            #post_time .dropdown   {
+                float: right;
+            }
             .dropdown-menu  {
                 
             }
@@ -329,7 +386,13 @@
   padding:10px;
   width:250px;
   font-size:14px;
-  margin:50px auto;
-  border-radius:8px;
-  border:6px solid #556677;
+  margin:0px auto;
+  border-radius:0px;
+  border:0px;
 }
+
+    .form-control   {
+        border: 0px;
+        border-radius: 0px;
+        font-size: 12px;
+    }
